mobx - renamed build to job, renamed styles, fixed regeneretor
