# server/components/routes.ts
@@ -1,12 +1,12 @@
 import { Router } from 'express';
 
-import buildRouter from './builds/buildRouter';
+import jobRouter from './jobs/jobRouter';
 import settingsRouter from './settings/settingsRouter';
 
 const router = Router();
 
 export default function(): Router {
     router.use('/settings', settingsRouter);
-    router.use('/builds', buildRouter);
+    router.use('/jobs', jobRouter);
     return router;
 }
